--- a/json-utils/pom.xml
+++ b/json-utils/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.codebyexample</groupId>
-	<artifactId>hello-world</artifactId>
+	<artifactId>json-utils</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Hello World</name>
+	<name>Json Utils</name>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -15,6 +15,23 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -25,7 +42,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>io.codebyexample.helloworld.Main</mainClass>
+							<mainClass>io.codebyexample.jsonutils.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
