--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.codebyexample</groupId>
-    <artifactId>java-json-utils</artifactId>
+    <groupId>io.github.huypva</groupId>
+    <artifactId>json-utils-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Parent</name>
